--- a/web/src/styles/ReturnPage.css
+++ b/web/src/styles/ReturnPage.css
@@ -1,9 +1,41 @@
-.cards-container {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
-  justify-items: center;
-  gap: 120px 8px;
-  padding: 16px;
+.return-page {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.return-container {
+    margin-top: 64px;
+    width: 160px;
+    display: flex;
+    flex-direction: column;
+    color: black;
+    font-size: 16px;
+    gap: 8px;
+}
+
+.return-row {
+    height: 30px;
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr auto;
+    text-align: start;
+}
+
+.return-value {
+    font-weight: bold;
+}
+
+.return-confirm {
+    width: 226px;
+    height: 72px;
+    border-radius: 20px;
+    color: black;
+    background-color: #0bb94f;
+    border: none;
+    font-size: 16px;
+    margin-top: 96px;
 }
 
 .tree-card {
@@ -43,7 +75,7 @@
 .progress-fill {
   height: 100%;
   background-color: #4caf50; /* 초록색 진행 표시 */
-  transition: width 0.3s ease; /* 애니메이션 */
+  transition: width 3s ease; /* 애니메이션 */
 }
 
 .tree-page-title {
