--- a/web/src/styles/App.css
+++ b/web/src/styles/App.css
@@ -36,13 +36,13 @@
 .back-header {
   color: #0bb94f;
   font-size: 32px;
-  background-color: #d9d9d9;
   width: 100%;
   z-index: 2;
   display: flex;
   align-items: center;
   justify-content: center;
   height: 60px;
+  position: relative;
 }
 
 .back-header.show-header {
