--- a/web/src/styles/App.css
+++ b/web/src/styles/App.css
@@ -10,6 +10,7 @@
   height: 852px;
   position: relative;
   background-color: white;
+  overflow: hidden;
 }
 
 #map {
@@ -18,14 +19,14 @@
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 1;
+  z-index: 2;
 }
 
 .header {
   color: #0bb94f;
   font-size: 32px;
   width: 100%;
-  z-index: 2;
+  z-index: 3;
   position: relative;
   display: flex;
   justify-content: flex-start;
@@ -37,7 +38,7 @@
   color: #0bb94f;
   font-size: 32px;
   width: 100%;
-  z-index: 2;
+  z-index: 3;
   display: flex;
   align-items: center;
   justify-content: center;
