--- a/web/src/styles/ReturnPage.css
+++ b/web/src/styles/ReturnPage.css
@@ -36,6 +36,8 @@
     border: none;
     font-size: 16px;
     margin-top: 96px;
+    position: absolute;
+    bottom: 32px;
 }
 
 .tree-card {
@@ -43,16 +45,20 @@
   height: 216px;
   background-color: #f4f4f4; /* 카드 배경 */
   border-radius: 20px;
-  padding: 10px;
+  padding: 16px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* 그림자 */
   text-align: center;
   position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .tree-image {
+  flex: 1;
   width: 100%;
   height: 100px;
-  border: 2px solid #007bff; /* 파란색 테두리 */
   border-radius: 5px;
   margin-bottom: 10px;
 }
