--- a/web/src/styles/App.css
+++ b/web/src/styles/App.css
@@ -27,37 +27,47 @@
   color: #0bb94f;
   font-size: 32px;
   width: 100%;
+  height: 60px;
   z-index: 3;
   position: relative;
   display: flex;
-  justify-content: flex-start;
   align-items: center;
-  padding: 16px;
+  justify-content: center;
+  position: relative;
+  background-color: #d9d9d94D;
 }
 
 .back-header {
   color: #0bb94f;
   font-size: 32px;
   width: 100%;
+  height: 60px;
   z-index: 3;
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 60px;
   position: relative;
 }
 
 .back-header.show-header {
-  background-color: #d9d9d9;
+  background-color: #d9d9d94D;
+}
+
+.logo-image {
+  height: 32px;
 }
 
 .header-title {
   align-self: center;
+  padding-top: 8px;
 }
 
 .back-button {
   position: absolute;
   left: 8px;
+  background-color: #ffffff00;
+  cursor: pointer;
+  border: none;
 }
 
 .sub-title {
