--- a/web/src/styles/TreePage.css
+++ b/web/src/styles/TreePage.css
@@ -2,13 +2,11 @@
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
   justify-items: center;
-  gap: 120px 8px;
+  gap: 16px 8px;
   padding: 16px;
 }
 
 .tree-card {
-  width: 150px;
-  height: 216px;
   background-color: #f4f4f4; /* 카드 배경 */
   border-radius: 20px;
   padding: 10px;
@@ -21,7 +19,6 @@
   width: 100%;
   height: 100px;
   border-radius: 5px;
-  margin-bottom: 10px;
 }
 
 .tree-name {
@@ -46,6 +43,5 @@
 }
 
 .tree-page-title {
-  margin-top: 32px;
-  margin-bottom: 64px;
+  font-size: 24px;
 }
