--- a/web/src/styles/TreePage.css
+++ b/web/src/styles/TreePage.css
@@ -13,6 +13,7 @@
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* 그림자 */
   text-align: center;
   position: relative;
+  cursor: pointer;
 }
 
 .tree-image {
