--- a/web/src/styles/MapPage.css
+++ b/web/src/styles/MapPage.css
@@ -47,7 +47,6 @@
   width: 100px;
   height: 8px;
   border-width: 1px;
-  border-color: red;
   flex-direction: row;
 }
 
@@ -62,13 +61,12 @@
   justify-content: flex-start;
 }
 
-
 .content-section {
   text-align: center;
-  width: 100%;
-  position: absolute;
-  margin-left: 50px;
+  width: 50%;
   margin-top: 10px;
+  position: absolute;
+  margin-left: -40%
 }
 
 .details {
@@ -77,7 +75,6 @@
   text-align: left;
   font-size: 16px;
   color: #555;
-  
 }
 
 .details li {
@@ -89,13 +86,14 @@
   color: white;
   border: none;
   border-radius: 20px;
-  padding: 15px 35px;
   font-size: 16px;
   cursor: pointer;
   transition: background-color 0.3s;
   position: absolute;
-  margin-left: 0px;
-  margin-top: -20px
+  width: 128px;
+  height: 45px;
+  margin-left: 55%;
+  margin-top: -10%;
 }
 
 .return-button:hover {
